--- a/codigo/menus/ModernGUI_V3/Interfac_V3.csproj
+++ b/codigo/menus/ModernGUI_V3/Interfac_V3.csproj
@@ -49,6 +49,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Capa_Controlador_Navegador">
+      <HintPath>..\..\..\..\..\..\..\Proyecto rrh - hotel San Carlo\asis2k25p2_rrhh\codigo\componentes\navegador\NavegadorMVC\CapaControladorNavegador\bin\Debug\Capa_Controlador_Navegador.dll</HintPath>
+    </Reference>
+    <Reference Include="Capa_Vista_Navegador">
+      <HintPath>..\..\..\..\..\..\..\Proyecto rrh - hotel San Carlo\asis2k25p2_rrhh\codigo\componentes\navegador\NavegadorMVC\CapaVistaNavegador\bin\Debug\Capa_Vista_Navegador.dll</HintPath>
+    </Reference>
+    <Reference Include="Capa_Vista_Seguridad">
+      <HintPath>..\..\componentes\seguridad\SeguridadMVC\SeguridadMVC\CapaVista\bin\Debug\Capa_Vista_Seguridad.dll</HintPath>
+    </Reference>
+    <Reference Include="Capa_Vista_Seguridad_Nom1">
+      <HintPath>..\..\..\..\..\..\..\Proyecto rrh - hotel San Carlo\asis2k25p2_rrhh\codigo\modulos\rrhh\Rrhh_MVC\SeguridadMVC\CapaVista\bin\Debug\Capa_Vista_Seguridad_Nom1.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
